# spacyturk

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
spacyturk/: __init__.py  __main__.py  api.py  pkg.py
